feat: 调整输出格式